--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "google-generativeai>=0.8.3",
+    "pocketbase>=0.14.0",
     "python-dotenv>=1.0.1",
     "streamlit>=1.41.1",
     "youtube-transcript-api>=0.6.3",
